--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".data.items.ManageItemActivity">
+        </activity>
         <activity android:name=".data.categories.ManageCategoryActivity">
         </activity>
         <activity android:name=".materials.ManageMaterialsActivity">
